--- a/style.css
+++ b/style.css
@@ -4,22 +4,44 @@
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
 }
+:root{
+    --primary-color: black;
+    --secondary-color: #fff;
+    --tertiary-color: #262626;
+    --forth-color: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+}
+.light-theme{
+    --primary-color: #fff; 
+    --secondary-color: black;
+    --tertiary-color: #fdccff;
+    --forth-color: linear-gradient(to left, #ac30ffaf 0%, rgba(255, 55, 55, 0.701) 100%);
+}
+#icon{
+    width: 30px;
+    cursor: pointer;
+}
+nav ul{
+    flex: 1;
+    text-align: right;
+}
 html{
     scroll-behavior: smooth;
 }
 body{
-    background: #080808;
-    background: #06000f;
-    background: black;
-    color: #fff;
+    /* background: #080808; */
+    /* background: #06000f; */
+    background: var(--primary-color);
+    color: var(--secondary-color);
 }
 #header{
     width : 100%;
     height: 100vh;
-    /* background-image: url(images/background.png); */
-    background-image: url(images/web8.png);
+    background-image: url(images/background.png);
+    /* background-image: url(images/web8.png); */
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 .container{
     padding: 10px 10%;
@@ -38,7 +60,8 @@ nav h1{
     font-weight:600;
     /* color: #fff; */
     /* background: linear-gradient(to left, #b14bf4 0%, #7857ff 100%); */
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -48,7 +71,8 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    color: #fff;
+    /* color: #fff; */
+    color: var(--secondary-color);
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -58,7 +82,8 @@ nav ul li a::after{
     width:0;
     height: 3px;
     /* background: linear-gradient(to left, #b14bf4 0%, #7857ff 100%); */
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -77,7 +102,8 @@ nav ul li a:hover::after{
 }
 .header-text h1 span{
     /* background: -webkit-linear-gradient(0deg,#b14bf4, #7857ff); */
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -106,7 +132,8 @@ nav ul li a:hover::after{
     font-weight:600;
     /* color: #fff; */
     /* background: linear-gradient(to left, #b14bf4 0%, #7857ff 100%); */
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -138,7 +165,8 @@ nav ul li a:hover::after{
     width:0;
     height: 3px;
     background: #ff004f;
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -153,7 +181,8 @@ nav ul li a:hover::after{
 }
 .tab-contents ul li span{
     color: #b54769;
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 14px;
@@ -176,7 +205,8 @@ nav ul li a:hover::after{
     margin-top: 50px;
 }
 .services-list div{
-    background: #262626;
+    /* background: #262626; */
+    background: var(--tertiary-color);
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -194,7 +224,8 @@ nav ul li a:hover::after{
 }
 .services-list div a{
     text-decoration: none;
-    color: #fff;
+    /* color: #fff; */
+    color: var(--secondary-color);
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
@@ -210,7 +241,8 @@ nav ul li a:hover::after{
     /* background: linear-gradient(rgba(0,0,0,0.6), #2f000f); */
     background: linear-gradient(to left, #ff99cc 0%, #660033 100%);
     /* background: linear-gradient(to left, #b14bf4 30%, #7857ff 100%); */
-    background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    /* background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%); */
+    background: var(--forth-color);
     transform:translateY(-10px);
 }
 /* -----------------portfolio----------------- */
@@ -241,6 +273,7 @@ nav ul li a:hover::after{
     background: linear-gradient(rgba(0,0,0,0.6), #2f000f);
     /* background: linear-gradient(rgba(177, 75, 244, 0.4), #7857ff); */
     background: linear-gradient(rgba(172, 48, 255, 0.4), rgb(255, 55, 55));
+    background: var(--forth-color);
     /* background: linear-gradient(to bottom, #ff99cc 0%, #660033 100%); */
     border-radius: 10px;
     position: absolute;
@@ -266,7 +299,8 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background: #fff;
+    /* background: #fff; */
+    background: var(--secondary-color);
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -286,13 +320,15 @@ nav ul li a:hover::after{
     padding: 14px 50px;
     border-radius: 6px; 
     text-decoration: none;
-    color: #fff;
+    /* color: #fff; */
+    color: var(--secondary-color);
     transition: background 0.5s;
 }
 .btn:hover{
     /* background: #ff004f; */
     background: linear-gradient(to left, #b14bf4 30%, #7857ff 100%);
     background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    background: var(--forth-color);
 }
 /* ---------------------contact---------------------- */
 .contact-left{
@@ -308,6 +344,7 @@ nav ul li a:hover::after{
     /* color: #ff004f; */
     /* background: linear-gradient(to right, #b14bf4 0%, #7857ff 100%); */
     background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    background: var(--forth-color);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
     margin-right: 15px;
@@ -328,6 +365,7 @@ nav ul li a:hover::after{
     /* color: #ff004f; */
     /* background: linear-gradient(to right, #b14bf4 0%, #7857ff 100%); */
     background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    background: var(--forth-color);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
     transform: translateY(-5px);
@@ -335,6 +373,7 @@ nav ul li a:hover::after{
 .btn.btn2{
     display: inline-block;
     background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    background: var(--forth-color);
 }
 .contact-right form{
     width: 100%;
@@ -343,10 +382,12 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: #262626;
+    /* background: #262626; */
+    background: var(--tertiary-color);
     padding: 15px;
     margin: 15px 0;
-    color: #fff;
+    /* color: #fff; */
+    color: var(--secondary-color);
     font-size: 18px;
     border-radius: 6px;
 }
@@ -360,7 +401,7 @@ form .btn2{
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: black;
+    background: var(--primary-color);
     /* background: linear-gradient(to right, #ff99cc 0%, #660033 100%); */
     font-weight: 300;
     margin-top: 20px;
@@ -369,6 +410,7 @@ form .btn2{
     /* color: #ff004f;*/
     /* background: linear-gradient(to right, #b14bf4 0%, #7857ff 100%); */
     background: linear-gradient(to left, #ac30ff 0%, rgb(255, 55, 55) 100%);
+    background: var(--forth-color);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -397,6 +439,7 @@ nav .fas{
         background: #ff004f;
         background: linear-gradient(to bottom, #ff99cc 0%, #660033 100%);
         background: linear-gradient(to bottom, #ac30ff 0%, rgb(255, 55, 55) 100%);
+        background: var(--forth-color);
         position: fixed;
         top: 0;
         right: -200px; 
